Marked up the first page html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="main-header">
+      <h1 class="visualy hidden">Магазин гаджетов Device</h1>
+      <a href="#" class="logo main-logo">
+        <img src="#" alt="device">
+      </a>
+      <div class="main-menu">
+        <div class="form-search">
+          <!--form will be here-->
+        </div>
+        <div class="authorization">
+          <a href="#">Войти</a>
+        </div>
+        <a href="#">Сравнить</a>
+        <a href="#">Корзина</a>
+      </div>
+      <section>
+        <h2>Каталог товаров</h2>
+        <ul class="header-cotalog">
+          <li><a href="#">Виртуальная реальность</a></li>
+          <li><a href="#">Фитнеc-браслеты</a></li>
+          <li><a href="#">Квадрокоптеры</a></li>
+          <li><a href="#">Моноподы для селфи</a></li>
+          <li><a href="#">Умные часы</a></li>
+          <li><a href="#">Экшн-камеры</li>
+        </ul>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+      </nav>
+    <header>
   </body>
-</html>
+  </html>
