Marked up the first page html

--- a/index.html
+++ b/index.html
@@ -1,38 +1,125 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <h1 class="visualy hidden">Магазин гаджетов Device</h1>
-      <a href="#" class="logo main-logo">
-        <img src="#" alt="device">
-      </a>
-      <div class="main-menu">
-        <div class="form-search">
-          <!--form will be here-->
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Девайс</title>
+    </head>
+    <body>
+        <header class="main-header">
+            <h1 class="visualy hidden">Магазин гаджетов Device</h1>
+            <a href="#" class="logo main-logo">
+                <img src="#" alt="DEVICE">
+            </a>
+            <div class="main-menu">
+                <div class="form-search">
+                <!--form will be here-->
+                </div>
+                <div class="authorization">
+                    <a href="#">Войти</a>
+                </div>
+                <div>
+                    <a href="#">Сравнить</a>
+                </div>
+                <div>
+                    <a href="#">Корзина</a>
+                </div>
+            </div>
+            <nav class="main-nav">
+                <h2>Каталог товаров</h2>
+                <ul>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Гарантия</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+                <ul class="header-cotalog">
+                    <li><a href="#">Виртуальная реальность</a></li>
+                    <li><a href="#">Фитнеc-браслеты</a></li>
+                    <li><a href="#">Квадрокоптеры</a></li>
+                    <li><a href="#">Моноподы для селфи</a></li>
+                    <li><a href="#">Умные часы</a></li>
+                    <li><a href="#">Экшн-камеры</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main main-index">
+            <!--content will be here-->
+            <div class="info">
+                <section>
+                    <h3>О нас</h3>
+                    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                    <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+                    <ul class="delevery">
+                        <li>Деловые Линии</li>
+                        <li>Автотрейдинг</li>
+                        <li>ЖелДорЭкспедиция</li>
+                    </ul>
+                    <a href="#" class="button">Подробнее о нас</a>
+                </section>
+                <section>
+                    <h3>Контакты</h3>
+                    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+                    <a href="#">
+                        <img src="#" alt="г. Москва, ул. Строителей, 15">
+                    </a>
+                    <a href="#" class="button">Напишите нам</a>
+                </section>
+            </div>
+        </main>
+        <footer>
+            <div>
+                <a href="#" class="logo footer-logo">
+                    <img src="#" alt="DEVICE">
+                </a>
+                <div class="authorization authorization-footer">
+                    <a href="#">Войти</a>
+                </div>
+                <div>
+                    <a href="#">Сравнить</a>
+                </div>
+                <div>
+                    <a href="#">Корзина</a>
+                </div>
+            </div>
+            <div class="contacts">
+                <address>г. Москва, ул. Строителей, 15</address>
+                <ul>
+                    <li>
+                        <a href="#">Доставка</a>
+                    </li>
+                    <li>
+                        <a href="#">Гарантия</a>
+                    </li>
+                    <li>
+                        <a href="#">Контакты</a>
+                    </li>
+                </ul>
+                <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+            </div>
+            <div class="social">
+                <ul class="social-list">
+                    <li>
+                        <a href="#">facebook</a>
+                    </li>
+                    <li>
+                        <a href="#">insta</a>
+                    </li>
+                    <li>
+                        <a href="#">vk</a>
+                    </li>
+                </ul>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
+                    <img src="#" alt="html academy">
+                </a>
+            </div>
+        </footer>
+        <!--Popups-->
+        <div class="popup popup-message">
+            <!--form wiil be here-->
+            <button class="button-close">x</button>
         </div>
-        <div class="authorization">
-          <a href="#">Войти</a>
+        <div class="popup popup-map">
+            <img src="#" alt="г. Москва, ул. Строителей, 15">
+            <button class="button-close">x</button>
         </div>
-        <a href="#">Сравнить</a>
-        <a href="#">Корзина</a>
-      </div>
-      <section>
-        <h2>Каталог товаров</h2>
-        <ul class="header-cotalog">
-          <li><a href="#">Виртуальная реальность</a></li>
-          <li><a href="#">Фитнеc-браслеты</a></li>
-          <li><a href="#">Квадрокоптеры</a></li>
-          <li><a href="#">Моноподы для селфи</a></li>
-          <li><a href="#">Умные часы</a></li>
-          <li><a href="#">Экшн-камеры</li>
-        </ul>
-      </section>
-
-      </nav>
-    <header>
   </body>
   </html>
