--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="#">Виртуальная реальность</a></li>
                     <li><a href="#">Фитнеc-браслеты</a></li>
                     <li><a href="#">Квадрокоптеры</a></li>
-                    <li><a href="#">Моноподы для селфи</a></li>
+                    <li><a href="catalog.html">Моноподы для селфи</a></li>
                     <li><a href="#">Умные часы</a></li>
                     <li><a href="#">Экшн-камеры</a></li>
                 </ul>
