--- a/catalog.html
+++ b/catalog.html
@@ -73,7 +73,7 @@
             <ul class="catalog-list">
                 <li>
                     <img src="#" class="image-catalog" alt="Селфи-палка любительская">
-                    <p>Любительская селфи-палка</p>
+                    <a href="#" class="catalog-item">Любительская селфи-палка</a>
                     <p class="price">500 руб.</p>
                     <div class="popup-catalog">
                         <a href="#" class="button">В корзину</a>
@@ -82,7 +82,7 @@
                 </li>
                 <li>
                     <img src="#" class="image-catalog" alt="Cелфи-палка профессиональная">
-                    <p>Профессиональная селфи-палка</p>
+                    <a href="#" class="catalog-item">Профессиональная селфи-палка</a>
                     <p class="price">1 500 руб.</p>
                     <div class="popup-catalog">
                         <a href="#" class="button">В корзину</a>
@@ -91,7 +91,7 @@
                 </li>
                 <li>
                     <img src="#" class="image-catalog" alt="Селфи-палка непотопляемая">
-                    <p>Непотопляемая селфи-палка</p>
+                    <a href="#" class="catalog-item">Непотопляемая селфи-палка</a>
                     <p class="price">2 500 руб.</p>
                     <div class="popup-catalog">
                         <a href="#" class="button">В корзину</a>
@@ -100,7 +100,7 @@
                 </li>
                 <li>
                     <img src="#" class="image-catalog" alt="Селфи-палка «Следуй за мной»">
-                    <p>Селфи-палка «Следуй за мной»</p>
+                    <a href="#" class="catalog-item">Селфи-палка «Следуй за мной»</a>
                     <p class="price">4 900 руб.</p>
                     <div class="popup-catalog">
                         <a href="#" class="button">В корзину</a>
