--- a/index.html
+++ b/index.html
@@ -115,11 +115,15 @@
         <!--Popups-->
         <div class="popup popup-message">
             <!--form wiil be here-->
-            <button class="button-close">x</button>
+            <button type="button" class="button-close">
+				<span class="visualy-hidden">Закрыть</span>
+			</button>
         </div>
         <div class="popup popup-map">
             <img src="#" alt="г. Москва, ул. Строителей, 15">
-            <button class="button-close">x</button>
+            <button type="button" class="button-close">
+                <span class="visualy-hidden">Закрыть</span>
+            </button>
         </div>
   </body>
   </html>
