--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <body>
         <header class="main-header">
             <a href="index.html" class="logo main-logo">
-                <img src="#" alt="DEVICE">
+                <img src="img/logo-device.svg" width="163" height="35"  alt="DEVICE">
             </a>
             <div class="main-menu">
                 <div class="form-search">
@@ -72,7 +72,7 @@
             </section>
             <ul class="catalog-list">
                 <li>
-                    <img src="#" class="image-catalog" alt="Селфи-палка любительская">
+                    <img src="img/item-1.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка любительская">
                     <a href="#" class="catalog-item">Любительская селфи-палка</a>
                     <p class="price">500 руб.</p>
                     <div class="popup-catalog">
@@ -81,7 +81,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="#" class="image-catalog" alt="Cелфи-палка профессиональная">
+                    <img src="img/item-2.jpg" class="image-catalog" width="360" height="380" alt="Cелфи-палка профессиональная">
                     <a href="#" class="catalog-item">Профессиональная селфи-палка</a>
                     <p class="price">1 500 руб.</p>
                     <div class="popup-catalog">
@@ -90,7 +90,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="#" class="image-catalog" alt="Селфи-палка непотопляемая">
+                    <img src="img/item-3.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка непотопляемая">
                     <a href="#" class="catalog-item">Непотопляемая селфи-палка</a>
                     <p class="price">2 500 руб.</p>
                     <div class="popup-catalog">
@@ -99,7 +99,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="#" class="image-catalog" alt="Селфи-палка «Следуй за мной»">
+                    <img src="img/item-4.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                     <a href="#" class="catalog-item">Селфи-палка «Следуй за мной»</a>
                     <p class="price">4 900 руб.</p>
                     <div class="popup-catalog">
@@ -112,7 +112,7 @@
         <footer>
             <div>
                 <a href="index.html" class="logo footer-logo">
-                    <img src="#" alt="DEVICE">
+                    <img src="img/logo-device.svg" width="163" height="35" alt="DEVICE">
                 </a>
                 <div class="authorization authorization-footer">
                     <a href="#">Валентин Петухов</a>
@@ -143,17 +143,23 @@
             <div class="social">
                 <ul class="social-list">
                     <li>
-                        <a href="#">facebook</a>
+                        <a href="#">
+                            <span class="visualy-hidden">facebook</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">insta</a>
+                        <a href="#">
+                            <span class="visualy-hidden">insta</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">vk</a>
+                        <a href="#">
+                            <span class="visualy-hidden">vk</span>
+                        </a>
                     </li>
                 </ul>
                 <a href="https://htmlacademy.ru/intensive/htmlcss">
-                    <img src="#" alt="html academy">
+                    <img src="img/logo-html.svg" width="27" height="35" alt="html academy">
                 </a>
             </div>
         </footer>
