--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <header class="main-header">
             <h1 class="visualy hidden">Магазин гаджетов Device</h1>
-            <a href="#" class="logo main-logo">
-                <img src="#" alt="DEVICE">
+            <a class="logo main-logo">
+                <img src="img/logo-device.svg" width="163" height="35"  alt="DEVICE">
             </a>
             <div class="main-menu">
                 <div class="form-search">
@@ -59,7 +59,7 @@
                     <h3>Контакты</h3>
                     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
                     <a href="#">
-                        <img src="#" alt="г. Москва, ул. Строителей, 15">
+                        <img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
                     </a>
                     <a href="#" class="button">Напишите нам</a>
                 </section>
@@ -67,8 +67,8 @@
         </main>
         <footer>
             <div>
-                <a href="#" class="logo footer-logo">
-                    <img src="#" alt="DEVICE">
+                <a class="logo footer-logo">
+                    <img src="img/logo-device.svg" width="163" height="35" alt="DEVICE">
                 </a>
                 <div class="authorization authorization-footer">
                     <a href="#">Войти</a>
@@ -98,17 +98,23 @@
             <div class="social">
                 <ul class="social-list">
                     <li>
-                        <a href="#">facebook</a>
+                        <a href="#">
+                            <span class="visualy-hidden">facebook</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">insta</a>
+                        <a href="#">
+                            <span class="visualy-hidden">insta</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">vk</a>
+                        <a href="#">
+                            <span class="visualy-hidden">vk</span>
+                        </a>
                     </li>
                 </ul>
                 <a href="https://htmlacademy.ru/intensive/htmlcss">
-                    <img src="#" alt="html academy">
+                    <img src="img/logo-html.svg" width="27" height="35" alt="html academy">
                 </a>
             </div>
         </footer>
