--- a/index.html
+++ b/index.html
@@ -42,7 +42,140 @@
             </nav>
         </header>
         <main class="main main-index">
-            <!--content will be here-->
+            <div class="slider">
+                <div class="slider-images">
+                    <img src="img/slider-1.png" alt="Самая длинная селфи палка" width="384" height="486">
+                    <img src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
+                    <img src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
+                </div>
+				<ul class="slader-list">
+					<li>
+						<b>Делай селфи, как Бен Стиллер!</b>
+						<p>
+							Самая длинная палка для селфи доступна в нашем магазине.
+                            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+						</p>
+						<a href="#" class="button"> Подробнее</a>
+						<table>
+							<tr>
+								<th>Длина палки</th>
+								<th>Вес палки</th>
+								<th>Материал</th>
+							</tr>
+							<tr>
+								<td>8,5 м</td>
+								<td>5 кг</td>
+								<td>Карбон</td>
+							</tr>
+						</table>
+					</li>
+					<li>
+						<b>Худеем правильно!</b>
+						<p>
+							Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+						</p>
+						<a href="#" class="button"> Подробнее</a>
+						<table>
+							<tr>
+								<th>Без подзарядки</th>
+							</tr>
+							<tr>
+								<td>48 часов</td>
+							</tr>
+						</table>
+					</li>
+					<li>
+						<b>Порхает как бабочка, жалит как пчела!</b>
+						<p>
+							Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+						</p>
+						<a href="#" class="button"> Подробнее</a>
+						<table>
+							<tr>
+								<th>Дальность полета</th>
+								<th>Радиус поражения</th>
+							</tr>
+							<tr>
+								<td>800 м</td>
+								<td>50 м</td>
+							</tr>
+						</table>
+					</li>
+				</ul>
+			</div>
+			<ul class="main-cotalog-list">
+				<li>
+					<div class="icon-container"></div>
+					<a href="#">Виртуальная реальность</a>
+				</li>
+				<li>
+					<div class="icon-container"></div>
+					<a href="catalog.html">Моноподы для селфи</a>
+				</li>
+				<li>
+					<div class="icon-container"></div>
+					<a href="#">Экшн-камеры</a>
+				</li>
+				<li>
+					<div class="icon-container"></div>
+					<a href="#">Фитнеc-браслеты</a>
+				</li>
+				<li>
+					<div class="icon-container"></div>
+					<a href="#">Умные часы</a>
+				</li>
+				<li>
+					<div class="icon-container"></div>
+					<a href="#">Квадрокоптеры</a>
+				</li>
+			</ul>
+			<section class="service">
+				<ul class="service-slider">
+					<li>Доставка</li>
+					<li>Гарантия</li>
+					<li>Кредит</li>
+				</ul>
+				<div class="service-item">
+					<h3>Доставка</h3>
+					<p>
+						Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+					</p>
+				</div>
+				<div class="service-item">
+					<h3>Гарантия</h3>
+					<p>
+						Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
+					</p>
+				</div>
+				<div class="service-item">
+					<h3>Кредит</h3>
+					<p>
+						Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.
+					</p>
+				</div>
+			</section>
+			<ul class="brands">
+				<li>
+					<a href="#">
+						<img src="img/dji.jpg" alt="dji" width="260" height="100">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/spg.jpg" alt="sp gadgets" width="260" height="100">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/gopro.jpg" alt="GoPro" width="260" height="100">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/vive.jpg" alt="vive" width="260" height="100">
+					</a>
+				</li>
+			</ul>
             <div class="info">
                 <section>
                     <h3>О нас</h3>
@@ -104,7 +237,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span class="visualy-hidden">insta</span>
+                            <span class="visualy-hidden">instagram</span>
                         </a>
                     </li>
                     <li>
