filter price added

--- a/catalog.html
+++ b/catalog.html
@@ -55,6 +55,14 @@
                 <form action="https://echo.htmlacademy.ru" method="post">
                     <fieldset>
                         <legend>Стоимость</legend>
+                        <div class="range-filter">
+                            <label>
+                                <input type="text" name="min-value" value="0">
+                            </label>
+                            <label>
+                                <input type="text" name="max-value" value="5000">
+                            </label>
+                        </div>
                     </fieldset>
                     <fieldset>
                         <legend>Цвет</legend>
