--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
 						</p>
 						<a href="#" class="button"> Подробнее</a>
-						<table>
+						<table class="table-slider">
 							<tr>
 								<th>Длина палки</th>
 								<th>Вес палки</th>
@@ -80,7 +80,7 @@
 							Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
 						</p>
 						<a href="#" class="button"> Подробнее</a>
-						<table>
+						<table class="table-slider">
 							<tr>
 								<th>Без подзарядки</th>
 							</tr>
@@ -95,7 +95,7 @@
 							Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
 						</p>
 						<a href="#" class="button"> Подробнее</a>
-						<table>
+						<table class="table-slider">
 							<tr>
 								<th>Дальность полета</th>
 								<th>Радиус поражения</th>
