--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="main-header container">
+        <header class="main-header catalog-header container">
             <a href="index.html" class="logo main-logo">
                 <img src="img/logo-device.svg" width="163" height="35"  alt="DEVICE logo">
             </a>
