--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="form-search">
                     <form action="https://echo.htmlacademy.ru" method="post">
                         <input type="search" name="search" placeholder="Поиск по сайту">
-                        <a href="#" class="search-button">Найти</a>
+                        <button type="submit" class="search-button">Найти</button>
                     </form>
                 </div>
                 <div class="authorization-container">
